fix: align content in translation__name element

--- a/online-zoo/pages/zoos-translation/panda/panda.css
+++ b/online-zoo/pages/zoos-translation/panda/panda.css
@@ -210,9 +210,11 @@ li {
 }
 .translation__name {
   width: 420px;
-  height: 110px;
   border-bottom: 1px solid #e3e3e3;
   display: flex;
+  align-items: center;
+  box-sizing: border-box;
+  padding-bottom: 40px;
 }
 .translation__h3 {
   font-style: normal;
